--- a/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionUsuarios/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionUsuarios/index.xhtml
@@ -13,11 +13,17 @@
         </p:breadCrumb>
     </ui:define>
     <ui:define name="content">
-        <p:tabView>
+        <p:tabView tabindex="#{mntoUsuariosController.indexMenu}" activeIndex="#{mntoUsuariosController.indexMenu}" id="tabMenu">
             <p:tab title="Consulta de Usuarios">
-                <h:form>
+                <h:form id="consultaForm">
                     <p:dialog widgetVar="dlgAyuda" modal="true" appendTo="@(body)" header="Ayuda">
                         <p:outputLabel value="Esta ayuda sirve un monton"/>
+                    </p:dialog>
+                    <p:dialog widgetVar="dlgEliminar" header="Eliminar" modal="true">
+                        <p:outputLabel value="¿Está seguro de eliminar el registro?" class="TexAlCenter" ></p:outputLabel>
+                        <div class="EmptyBox20"></div>
+                        <p:commandButton value="Si" action="#{mntoUsuariosController.eliminarUsuario()}" update="tabMenu:consultaForm" oncomplete="PF('dlgEliminar').hide()"></p:commandButton>
+                        <p:commandButton value="No" onclick="PF('dlgEliminar').hide();" ></p:commandButton>
                     </p:dialog>
                     <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
                     <p:dataTable rows="10" var="car" value="#{mntoUsuariosController.usuariosList}" 
@@ -26,24 +32,31 @@
                                  rowsPerPageTemplate="5,10,15"
                                  reflow="true">
                         <p:column headerText="Usuario" filterBy="#{car.usuario}" filterMatchMode="contains" filterable="true">
-                            #{formatoPantallas.campo30}
+                            #{car.usuario}
                         </p:column>
                         <p:column headerText="Tipo de usuario" filterBy="#{car.tipoUsuario}" filterMatchMode="contains" filterable="true">
-                            #{formatoPantallas.campo15}
+                            #{car.tipoUsuario}
                         </p:column>
                         <p:column headerText="Tipo de permiso" filterBy="#{car.tipoPermiso}" filterMatchMode="contains" filterable="true">
-                            #{formatoPantallas.campo15}
+                            #{car.tipoPermiso}
                         </p:column>
                         <p:column headerText="Nombre" filterBy="#{car.nombre}" filterMatchMode="contains" filterable="true">
-                            #{formatoPantallas.campo300}
+                            #{car.nombre}
+                        </p:column>
+                        <p:column headerText="Estado" filterBy="#{car.estado}" filterMatchMode="contains" filterable="true">
+                            #{car.estado}
                         </p:column>
                         <p:column headerText="Acciones">
-                            <i class="icon-compose Fs25 Red" style="cursor: pointer" title="Modificar Usuario"></i>
-                            <i class="icon-close Fs25 Red" style="cursor: pointer" title="Eliminar Usuario"></i>
+                            <p:commandLink action="#{mntoUsuariosController.modificar(car)}" update="tabMenu" >
+                                <i class="icon-compose Fs25 Red" title="Modificar Usuario" ></i>
+                            </p:commandLink>
+                            <p:commandLink action="#{mntoUsuariosController.eliminar(car)}" onclick="PF('dlgEliminar').show();" immediate="true" >
+                                <i class="icon-close Fs25 Red" style="cursor: pointer" title="Eliminar Usuario"></i>
+                            </p:commandLink>
                         </p:column>
                     </p:dataTable>
                     <div class="EmptyBox20"></div>
-                    <p:commandButton value="Crear Usuario"></p:commandButton>
+                    <p:commandButton value="Crear Usuario" action="#{mntoUsuariosController.setIndexMenu(1)}" update="tabMenu"></p:commandButton>
                     <p:commandButton value="Refrescar"></p:commandButton>
                 </h:form>
             </p:tab>
@@ -54,40 +67,46 @@
                     </p:dialog>
                     <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
                     <div class="EmptyBox20"></div>
-                    <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel value="Usuario: " class=" Responsive"></p:outputLabel>
-                        <p:inputText  value="#{formatoPantallas.campo30}"></p:inputText>
-                        <p:outputLabel  value="Tipo de Usuario: " class=" Responsive"></p:outputLabel>
-                        <p:selectOneMenu>
-                            <f:selectItem itemValue="0" itemLabel="#{formatoPantallas.campo15}"></f:selectItem>
+                    <p:panelGrid columns="2" class="Container50 Responsive" id="p1">
+                        <p:outputLabel for="usuario" value="Usuario: " class=" Responsive"></p:outputLabel>
+                        <p:inputText id="usuario" value="#{mntoUsuariosController.usuarioNuevo.usuario}" required="true" requiredMessage="Debe ingresar Usuario"></p:inputText>
+                        <p:outputLabel for="tipoUsuario" value="Tipo de Usuario: " class=" Responsive"></p:outputLabel>
+                        <p:selectOneMenu id="tipoUsuario" value="#{mntoUsuariosController.usuarioNuevo.codTipoUsuario}" valueChangeListener="#{mntoUsuariosController.getNombreUsuarios}" immediate="true" tabindex="0" required="true" requiredMessage="Debe seleccionar tipo de usuario">
                             <f:selectItem itemValue="0" itemLabel="Alumno"></f:selectItem>
                             <f:selectItem itemValue="1" itemLabel="Docente"></f:selectItem>
+                            <p:ajax event="valueChange" update="nombre"/>
                         </p:selectOneMenu>
-                        <p:outputLabel  value="Tipo de Permiso: " class=" Responsive"></p:outputLabel>
-                        <p:selectOneMenu>
-                            <f:selectItem itemValue="0" itemLabel="#{formatoPantallas.campo15}"></f:selectItem>
+                        <p:outputLabel for="tipoPermiso" value="Tipo de Permiso: " class=" Responsive"></p:outputLabel>
+                        <p:selectOneMenu id="tipoPermiso" value="#{mntoUsuariosController.usuarioNuevo.codTipoPermiso}" tabindex="0"  required="true" requiredMessage="Debe seleccionar tipo de permiso">
                             <f:selectItem itemValue="0" itemLabel="Alumno"></f:selectItem>
                             <f:selectItem itemValue="1" itemLabel="Docente"></f:selectItem>
-                            <f:selectItem itemValue="2" itemLabel="Adminsitrador"></f:selectItem>
+                            <f:selectItem itemValue="2" itemLabel="Administrador"></f:selectItem>
                         </p:selectOneMenu>
-                        <p:outputLabel  value="Nombre: " class=" Responsive" ></p:outputLabel>
-                        <p:selectOneMenu  filter="true" filterMatchMode="contains">
-                            <f:selectItem itemValue="0" itemLabel="#{formatoPantallas.campo300}"></f:selectItem>
-                            <f:selectItem itemValue="1" itemLabel="Carmen"></f:selectItem>
-                            <f:selectItem itemValue="2"  itemLabel="Alicia"></f:selectItem>
+                        <p:outputLabel for="nombre" value="Nombre: " class=" Responsive" ></p:outputLabel>
+                        <p:selectOneMenu id="nombre"  filter="true" filterMatchMode="contains" value="#{mntoUsuariosController.usuarioNuevo.idUsuario}" tabindex="0"  required="true" requiredMessage="Debe seleccionar nombre">
+                            <f:selectItems value="#{mntoUsuariosController.nombresDisponibles}" var="nomb" itemValue="${nomb.idUsuario}" itemLabel="${nomb.nombre}"></f:selectItems>
                         </p:selectOneMenu>
                     </p:panelGrid>
-                    <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel  value="Contraseña: " class="  Responsive"></p:outputLabel>
-                        <p:inputText  value="#{formatoPantallas.campo30}"></p:inputText>
-                        <p:outputLabel  value="Repetir Contraseña: " class="  Responsive"></p:outputLabel>
-                        <p:inputText  value="#{formatoPantallas.campo30}"></p:inputText>
+                    <p:panelGrid columns="2" class="Container50 Responsive" id="p2">
+                        <p:outputLabel for="estado" value="Estado: " class=" Responsive" ></p:outputLabel>
+                        <p:selectOneMenu id="estado" value="#{mntoUsuariosController.usuarioNuevo.codEstado}" tabindex="0">
+                            <f:selectItem itemValue="A" itemLabel="Activo"></f:selectItem>
+                            <f:selectItem itemValue="I"  itemLabel="Inactivo"></f:selectItem>
+                        </p:selectOneMenu>
+                        <p:outputLabel for="pass1" value="Contraseña: " class="  Responsive"></p:outputLabel>
+                        <p:password id="pass1" value="#{mntoUsuariosController.usuarioNuevo.pass1}" match="pass2" feedback="true" weakLabel="Seguridad Baja" goodLabel="Seguridad Media" strongLabel="Seguridad Alta"  required="true" requiredMessage="Debe ingresar una contraseña"></p:password>
+                        <p:outputLabel for="pass2" value="Repetir Contraseña: " class="  Responsive"></p:outputLabel>
+                        <p:password id="pass2" value="#{mntoUsuariosController.usuarioNuevo.pass2}" ></p:password>
                     </p:panelGrid>
                     <div class="EmptyBox20"></div>
                     <div class="Container100 Responsive">
-                        <p:commandButton value="Guardar"/>
-                        <p:commandButton value="Limpiar"/>
-                        <p:commandButton value="Cancelar"/>
+                        <p:commandButton value="Guardar" actionListener ="#{mntoUsuariosController.guardar()}" update="p1,p2,tabMenu"/>
+                        <p:commandButton value="Limpiar" immediate="true">
+                            <p:ajax update="p1,p2" resetValues="true" />
+                        </p:commandButton>
+                        <p:commandButton value="Cancelar" immediate="true">
+                            <p:ajax update="p1,p2,tabMenu" resetValues="true" oncomplete="#{mntoUsuariosController.setIndexMenu(0)}"/>
+                        </p:commandButton>
                         <div class="EmptyBox20"></div>
                         <p:splitButton value="Otras Opciones" action="#">
                             <p:menuitem value="Gestionar Docentes">    
@@ -107,40 +126,40 @@
                     </p:dialog>
                     <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
                     <div class="EmptyBox20"></div>
-                    <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel value="Usuario: " class=" Responsive"></p:outputLabel>
-                        <p:inputText  value="#{formatoPantallas.campo30}"></p:inputText>
-                        <p:outputLabel  value="Tipo de Usuario: " class=" Responsive"></p:outputLabel>
-                        <p:selectOneMenu>
-                            <f:selectItem itemValue="0" itemLabel="#{formatoPantallas.campo15}"></f:selectItem>
-                            <f:selectItem itemValue="1" itemLabel="Docente"></f:selectItem>
-                            <f:selectItem itemValue="2" itemLabel="Alumno"></f:selectItem>
-                        </p:selectOneMenu>
-                        <p:outputLabel  value="Tipo de Permiso: " class=" Responsive"></p:outputLabel>
-                        <p:selectOneMenu>
-                            <f:selectItem itemValue="0" itemLabel="#{formatoPantallas.campo15}"></f:selectItem>
+                    <p:panelGrid columns="2" class="Container50 Responsive" id="mod_p1">
+                        <p:outputLabel for="mod_usuario" value="Usuario: " class=" Responsive"></p:outputLabel>
+                        <p:inputText id="mod_usuario" value="#{mntoUsuariosController.usuarioModifica.usuario}"></p:inputText>
+                        <p:outputLabel for="mod_tipoUsuario" value="Tipo de Usuario: " class=" Responsive"></p:outputLabel>
+                        <p:outputLabel id="mod_tipoUsuario" value="#{mntoUsuariosController.usuarioModifica.tipoUsuario}"></p:outputLabel>
+                        <p:outputLabel for="mod_tipoPermiso" value="Tipo de Permiso: " class=" Responsive"></p:outputLabel>
+                        <p:selectOneMenu id="mod_tipoPermiso" value="#{mntoUsuariosController.usuarioModifica.codTipoPermiso}" tabindex="0">
                             <f:selectItem itemValue="0" itemLabel="Alumno"></f:selectItem>
                             <f:selectItem itemValue="1" itemLabel="Docente"></f:selectItem>
-                            <f:selectItem itemValue="2" itemLabel="Adminsitrador"></f:selectItem>
+                            <f:selectItem itemValue="2" itemLabel="Administrador"></f:selectItem>
                         </p:selectOneMenu>
-                        <p:outputLabel  value="Nombre: " class=" Responsive" ></p:outputLabel>
-                        <p:selectOneMenu  filter="true" filterMatchMode="contains">
-                            <f:selectItem itemValue="0" itemLabel="#{formatoPantallas.campo300}"></f:selectItem>
-                            <f:selectItem itemValue="1" itemLabel="Carmen"></f:selectItem>
-                            <f:selectItem itemValue="2"  itemLabel="Alicia"></f:selectItem>
-                        </p:selectOneMenu>
+                        <p:outputLabel for="mod_nombre" value="Nombre: " class=" Responsive" ></p:outputLabel>
+                        <p:outputLabel id="mod_nombre" value="#{mntoUsuariosController.usuarioModifica.nombre}"></p:outputLabel>
                     </p:panelGrid>
-                    <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel  value="Contraseña: " class="  Responsive"></p:outputLabel>
-                        <p:inputText  value="#{formatoPantallas.campo30}"></p:inputText>
-                        <p:outputLabel  value="Repetir Contraseña: " class="  Responsive"></p:outputLabel>
-                        <p:inputText  value="#{formatoPantallas.campo30}"></p:inputText>
+                    <p:panelGrid columns="2" class="Container50 Responsive" id="mod_p2">
+                        <p:outputLabel for="mod_estado" value="Estado: " class=" Responsive" ></p:outputLabel>
+                        <p:selectOneMenu id="mod_estado" value="#{mntoUsuariosController.usuarioModifica.codEstado}" tabindex="0">
+                            <f:selectItem itemValue="A" itemLabel="Activo"></f:selectItem>
+                            <f:selectItem itemValue="I"  itemLabel="Inactivo"></f:selectItem>
+                        </p:selectOneMenu>
+                        <p:outputLabel for="mod_pass1" value="Contraseña: " class="  Responsive"></p:outputLabel>
+                        <p:password id="mod_pass1" value="#{mntoUsuariosController.usuarioModifica.pass1}" match="mod_pass2" feedback="true" weakLabel="Seguridad Baja" goodLabel="Seguridad Media" strongLabel="Seguridad Alta" requiredMessage="Debe ingresar una contraseña"></p:password>
+                        <p:outputLabel for="mod_pass2" value="Repetir Contraseña: " class="  Responsive"></p:outputLabel>
+                        <p:password id="mod_pass2" value="#{mntoUsuariosController.usuarioModifica.pass2}" ></p:password>
                     </p:panelGrid>
                     <div class="EmptyBox20"></div>
                     <div class="Container100 Responsive">
-                        <p:commandButton value="Guardar"/>
-                        <p:commandButton value="Limpiar"/>
-                        <p:commandButton value="Cancelar"/>
+                        <p:commandButton value="Guardar" action="#{mntoUsuariosController.guardarModifica()}" update="mod_p1,mod_p2,tabMenu"/>
+                        <p:commandButton value="Limpiar" immediate="true">
+                            <p:ajax update="mod_p1,mod_p2" resetValues="true" />
+                        </p:commandButton>
+                        <p:commandButton value="Cancelar" immediate="true">
+                            <p:ajax update="mod_p1,mod_p2,tabMenu" resetValues="true" oncomplete="#{mntoUsuariosController.setIndexMenu(0)}"/>
+                        </p:commandButton>
                         <div class="EmptyBox20"></div>
                         <p:splitButton value="Otras Opciones" action="#">
                             <p:menuitem value="Gestionar Docentes">    
