--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/programacionClase/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/programacionClase/index.xhtml
@@ -8,7 +8,7 @@
         <p:breadCrumb>
             <p:menuitem value="Home" url="/"/>
             <p:menuitem value="Gestionar Curso" url="#"/>
-            <p:menuitem value="Gestionar Clases" url="#"/>
+            <p:menuitem value="Gestionar Clase" url="#"/>
             <p:menuitem value="Programación de clases" url="#{siteUrls.programacionClases}"/>
             <p:separator />
         </p:breadCrumb>
