--- a/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteCursos/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteCursos/index.xhtml
@@ -7,6 +7,7 @@
     <ui:define name="breadCrumb">
         <p:breadCrumb>
             <p:menuitem value="Home" url="/"/>
+            <p:menuitem value="Reportes" url="#"/>
             <p:menuitem value="Reporte de Cursos" url="#{siteUrls.reporteCursos}"/>
 
             <p:separator />
