--- a/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteEstadisticoAvanceAlumnos/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteEstadisticoAvanceAlumnos/index.xhtml
@@ -7,6 +7,7 @@
     <ui:define name="breadCrumb">
         <p:breadCrumb>
             <p:menuitem value="Home" url="/"/>
+            <p:menuitem value="Reportes" url="#"/>
             <p:menuitem value="Reporte Estadistico de Avance por Alumno" url="#{siteUrls.reporteEstadisticoAvanceAlumno}"/>
 
             <p:separator />
