--- a/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteUsuarios/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteUsuarios/index.xhtml
@@ -32,19 +32,16 @@
                                  reflow="true">
 
                         <p:column headerText="Usuario" >
-                            #{formatoPantallas.campo20}
+                            #{formatoPantallas.campo30}
                         </p:column>
                         <p:column headerText="Nombre" >
-                            #{formatoPantallas.campo50}
+                            #{formatoPantallas.campo100}
                         </p:column>
-                        <p:column headerText="Apellido" >
-                            #{formatoPantallas.campo50}
+                        <p:column headerText="Tipo de usuario" >
+                            #{formatoPantallas.campo15}
                         </p:column>
-                        <p:column headerText="Tipo" >
-                            #{formatoPantallas.campo20}
-                        </p:column>
-                        <p:column headerText="Cargo" >
-                            #{formatoPantallas.campo20}
+                        <p:column headerText="Tipo de permiso" >
+                            #{formatoPantallas.campo15}
                         </p:column>
 
 
